[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/characters/other/paris2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/sceneten/jail.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/other/paris1.png" type="Texture" id=6]
[ext_resource path="res://act3/scene1/act3jailscene1.gd" type="Script" id=7]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=9]
[ext_resource path="res://act3/scene1/paris.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 94.6934, 1300.69 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2085.6, 117.683 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 359.53, 406.738 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1910.38, 1081.58 )
scale = Vector2( 1.01002, 1.03117 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -9.61792, 1019.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3895.26, 971.41 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1885.11, 2077.47 )
shape = SubResource( 2 )

[node name="player" parent="StaticBody2D/CollisionShape2D3" instance=ExtResource( 3 )]
position = Vector2( -1372.2, -429.182 )

[node name="paris" type="Area2D" parent="."]
position = Vector2( 6.83765, 20.5129 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="paris"]
margin_left = 2720.29
margin_top = 912.835
margin_right = 3190.29
margin_bottom = 1012.84
custom_fonts/font = SubResource( 3 )
text = "Talk (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialoguebox" type="Control" parent="paris"]
margin_left = -494.009
margin_top = -1255.84
margin_right = -454.009
margin_bottom = -1215.84
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="paris/dialoguebox"]
modulate = Color( 0.847059, 0.847059, 0.847059, 1 )
margin_left = 1102.0
margin_top = 1527.0
margin_right = 3669.0
margin_bottom = 2027.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="paris/dialoguebox"]
margin_left = 1270.0
margin_top = 1633.0
margin_right = 3443.0
margin_bottom = 1872.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="paris/dialoguebox"]
position = Vector2( 2806.6, 1718.21 )
scale = Vector2( 1.01937, 1.1028 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="paris/dialoguebox/continuesprite"]

[node name="Tween" type="Tween" parent="paris/dialoguebox"]

[node name="Type2" type="AudioStreamPlayer" parent="paris/dialoguebox"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="paris"]
position = Vector2( 2931.39, 1554.19 )
scale = Vector2( 1.15984, 1.11988 )
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="paris"]
position = Vector2( 2802.33, 1700.74 )
shape = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1933.15, 1070.25 )
scale = Vector2( 0.509515, 1.00294 )
texture = ExtResource( 1 )
[connection signal="body_entered" from="paris" to="paris" method="_on_paris_body_entered"]
[connection signal="body_exited" from="paris" to="paris" method="_on_paris_body_exited"]
[connection signal="tree_exited" from="paris/dialoguebox" to="." method="_on_dialoguebox_tree_exited"]
[connection signal="tween_completed" from="paris/dialoguebox/Tween" to="paris" method="_on_Tween_tween_completed"]
